# python-rule-engine-benchmark

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml  shipping_fee.dmn  test_business_rules.py  test_rule_engine.py  test_zen.py
